--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
 
 
 <!-- JavaScript -->
-<script src="assets/javascript/train.js"></script>
+<script src="assets/javascript/app.js"></script>
 </body>
 </html>
