added image for readme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        
       </tbody>
     </table>
-  </table>
+  <!-- </table> -->
 </div>
 
 <div class="panel panel-primary">
@@ -68,6 +68,7 @@
     	  	<button type="button" class="btn btn-primary" id= "submit">Submit</button>
       </form>
     </div>
+</div>
 </div>
 
 
